<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".MusicListActivity">

    <TextView
        android:id="@+id/nothingYet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_music"
        android:textColor="@color/grey"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,2"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,3"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/searchMusic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/grey"
                android:ems="10"
                android:hint="@string/search_song"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/grey"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="17dp"
                android:autofillHints="Bande organisé" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/main"
                android:contentDescription="@string/search_music_button"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </TableRow>

    </TableLayout>
    <ListView
        android:id="@+id/musicList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/save_music_choose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:ignore="ImageContrastCheck"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>